# ConcuRide

./: .gitignore  README.md
driver/: Cargo.toml  backup.txt  config.txt
driver/src/: driver.rs  handlers.rs  init.rs  main.rs  models.rs  ride_manager.rs  utils.rs
passanger/: Cargo.toml
passanger/rides/: ride1.json  ride2.json  ride9000.json  ride9001.json
passanger/src/: main.rs  models.rs  passanger.rs  passenger.rs  utils.rs
payment/: Cargo.toml
payment/src/: main.rs  messages.rs  payment.rs
