[package]
name = "untitled"
version = "0.1.0"
edition = "2021"
[dependencies]
rand = "0.8.5"
std-semaphore = "0.1"
tokio = { version = "^1", features = ["full"] }
quote = "1.0.27"
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
actix = "0.13.5"
actix-rt = "2.0" # <-- Runtime for actix
actix_async_handler = "0.1.0"
serde_json = "1.0.132"
async-std = "1.13.0"
serde = { version = "1.0.214", features = ["derive"] }
futures = "0.3"
colored = "2.0"
env_logger = "0.11.5"
log = "0.4.22"
