[package]
name = "Passenger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1", features = ["full"] }
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
actix = "0.13.5"
actix-rt = "2.0" # <-- Runtime for actix
actix_async_handler = "0.1.0"
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
colored = "2.0"
log = "0.4.22"